# pyGlobalPlatform

./: README.md  test.py
pyGlobalPlatform/: MANIFEST.in  README.rst  TODO.txt  setup.py
pyGlobalPlatform/pyGlobalPlatform/: globalplatformlib.py  javacardos.cap  test.py
pyGlobalPlatform/pyGlobalPlatform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyGlobalPlatform/pyGlobalPlatform/tests/: test.py
pyGlobalPlatform/src/: gp_functions.cpp  gp_functions.h  main.cpp
pyGlobalPlatform_pyd/: CMakeLists.txt  TODO.txt  gp_functions.cpp  gp_functions.h  main.cpp  pyGlobalPlatform.vcxproj  pyGlobalPlatform.vcxproj.filters  rebuild.sh  test.py
pyGlobalPlatform_pylib/: globalplatformlib.py
