cmake_minimum_required(VERSION 3.2)
project (pyglobalplatform)
add_library (pyglobalplatform SHARED main.cpp gp_functions.cpp)
set_target_properties (pyglobalplatform PROPERTIES PREFIX "")
if (NOT WIN32)
include_directories ( /usr/include /usr/include/PCSC /usr/include/python2.7 )
install (TARGETS pyglobalplatform DESTINATION /usr/lib/python2.7/lib-dynload)
endif (NOT WIN32)
target_link_libraries (pyglobalplatform globalplatform)
